centered search area

--- a/src/App.css
+++ b/src/App.css
@@ -232,6 +232,7 @@ body {
 .choose-mode-master-container .logo {
     width: 10vw;
     padding-top: 5vh;
+    padding-bottom: 5vh;
 }
 
 .search-area {
@@ -245,22 +246,27 @@ body {
 
 .search-area-button {
     font-size: 2vw;
-    background-color: #1db954;
-    border: 2px solid #1db954;
-    color: #f1f1f1;
+    background-color: #F76C6C;
+    border: 2px solid #F76C6C;
+    color: #fff;
 }
 
 .search-area-button:hover {
-    background-color: #1aa843;
-    color: #f1f1f1;
-    border-color: #17a540;
+    background-color: #E15A5A;
+    border-color: #E75C5C;
 }
 
 .search-results {
     position: absolute;
     background-color: #fff;
-    left: 34.66%;
+    left: 31.3%;
     width: 30.7vw;
+}
+
+@media screen and (max-width: 767px) {
+    .search-results {
+        left: 34%;
+    }
 }
 
 .search-results img {
